Comment out tests for incomplete register local model implementation
Signed-off-by: Daniel Widdis <widdis@gmail.com>